centered the text

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       <button id="scissorsButton">✌</button>
     </div>
     <br /><br />
-    <button id="restartButton">🔁</button>
-    <script src="./index.js"></script>
+    <div id="button-and-info">
+      <button id="restartButton">🔁</button>
+      <script src="./index.js"></script>
 
-    <div id="winLose"></div>
+      <div id="winLose"></div>
+    </div>
   </body>
 </html>
